# skill-vaults

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.sign/: README.md
.sisyphus/: boulder.json
.sisyphus/notepads/skillvault-development-plan/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: skillvault-development-plan.md
docs/superpowers/plans/: 2026-05-16-repo-retry-and-edit-enhancement.md
docs/superpowers/specs/: 2026-05-15-repositories-page-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  TESTING_GUIDE.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  test_utils.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: config.rs  dispatch.rs  dispatch_template.rs  mod.rs  repository.rs  schema.rs  skill.rs
src-tauri/src/dispatch/: copy.rs  mod.rs  symlink.rs  sync.rs  target_dir.rs
src-tauri/src/git/: auth.rs  mod.rs
src-tauri/src/llm/: client.rs  mod.rs  prompts.rs
src-tauri/src/skills/: analyzer.rs  crud.rs  discovery.rs  mod.rs
src/components/: AddRepositoryDialog.tsx
src/components/skills/: DispatchDialog.tsx  SkillDetailDialog.tsx  SkillPicker.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  radio-group.tsx  select.tsx
src/pages/: Dispatch.tsx  Onboarding.tsx  Repositories.tsx  Settings.tsx  Skills.tsx
src/pages/__tests__/: Skills.test.tsx
src/store/: configStore.ts  dispatchStore.ts  repositoryStore.ts  settingsStore.ts  skillStore.ts
src/test/: smoke.test.tsx
src/types/: dispatch.ts  llm.ts  repository.ts  skill.ts
(+2 files in other folders)
