[package]
name = "skillvault"
version = "0.1.0"
description = "SkillVault - A desktop application for managing your skills and knowledge"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
tauri-plugin-fs = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-updater = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
git2 = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "json"] }
anyhow = "1.0"
walkdir = "2.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }

[build-dependencies]
tauri-build = "2.0.0"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "z"
debug = false
rpath = false
overflow-checks = false

[workspace]
members = []
